// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignInForm /> should match snapshot 1`] = `
<Form
  className="form card"
>
  <h5
    className="text-center"
  >
    Sign In
  </h5>
  <p
    className="text-center font-weight-bold"
  >
    Sign in to book a meal now
  </p>
  <div>
    <Label
      className="label label-block"
      htmlFor="email"
    >
      Email address:
    </Label>
    <Field
      className=""
      id="email"
      name="email"
      placeholder="johndoe@domain.com"
      required={true}
      type="email"
    />
  </div>
  <div>
    <Label
      className="label label-block"
      htmlFor="password"
    >
      Password:
    </Label>
    <Field
      className=""
      id="password"
      name="password"
      placeholder="Enter password"
      required={true}
      type="password"
    />
  </div>
  <Button
    className="btn btn-default btn-default-lg font-weight-bold"
    disabled={false}
    type="submit"
    value="Sign In"
  />
  <p
    className="form-footer text-right"
  >
    Don't have an account?
     
    <span>
      <button
        className="btn btn-alt"
      >
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          to="/signup"
        >
          Sign Up
        </NavLink>
      </button>
    </span>
  </p>
</Form>
`;

exports[`<SignInForm /> should show an error if email does not validate 1`] = `
<Form
  className="form card"
>
  <h5
    className="text-center"
  >
    Sign In
  </h5>
  <p
    className="text-center font-weight-bold"
  >
    Sign in to book a meal now
  </p>
  <div>
    <Label
      className="label label-block"
      htmlFor="email"
    >
      Email address:
    </Label>
    <Field
      className=""
      id="email"
      name="email"
      placeholder="johndoe@domain.com"
      required={true}
      type="email"
    />
  </div>
  <div>
    <Label
      className="label label-block"
      htmlFor="password"
    >
      Password:
    </Label>
    <Field
      className=""
      id="password"
      name="password"
      placeholder="Enter password"
      required={true}
      type="password"
    />
  </div>
  <Button
    className="btn btn-default btn-default-lg font-weight-bold"
    disabled={false}
    type="submit"
    value="Sign In"
  />
  <p
    className="form-footer text-right"
  >
    Don't have an account?
     
    <span>
      <button
        className="btn btn-alt"
      >
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          to="/signup"
        >
          Sign Up
        </NavLink>
      </button>
    </span>
  </p>
</Form>
`;

exports[`<SignInForm /> should show an error if password does not validate 1`] = `
<Form
  className="form card"
>
  <h5
    className="text-center"
  >
    Sign In
  </h5>
  <p
    className="text-center font-weight-bold"
  >
    Sign in to book a meal now
  </p>
  <div>
    <Label
      className="label label-block"
      htmlFor="email"
    >
      Email address:
    </Label>
    <Field
      className=""
      id="email"
      name="email"
      placeholder="johndoe@domain.com"
      required={true}
      type="email"
    />
  </div>
  <div>
    <Label
      className="label label-block"
      htmlFor="password"
    >
      Password:
    </Label>
    <Field
      className=""
      id="password"
      name="password"
      placeholder="Enter password"
      required={true}
      type="password"
    />
  </div>
  <Button
    className="btn btn-default btn-default-lg font-weight-bold"
    disabled={false}
    type="submit"
    value="Sign In"
  />
  <p
    className="form-footer text-right"
  >
    Don't have an account?
     
    <span>
      <button
        className="btn btn-alt"
      >
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          to="/signup"
        >
          Sign Up
        </NavLink>
      </button>
    </span>
  </p>
</Form>
`;

exports[`<SignInForm /> should show loading indicator when isSubmitting 1`] = `
<Form
  className="form card"
>
  <h5
    className="text-center"
  >
    Sign In
  </h5>
  <p
    className="text-center font-weight-bold"
  >
    Sign in to book a meal now
  </p>
  <div>
    <Label
      className="label label-block"
      htmlFor="email"
    >
      Email address:
    </Label>
    <Field
      className=""
      id="email"
      name="email"
      placeholder="johndoe@domain.com"
      required={true}
      type="email"
    />
  </div>
  <div>
    <Label
      className="label label-block"
      htmlFor="password"
    >
      Password:
    </Label>
    <Field
      className=""
      id="password"
      name="password"
      placeholder="Enter password"
      required={true}
      type="password"
    />
  </div>
  <Button
    className="btn btn-default btn-default-lg font-weight-bold"
    disabled={true}
    type="submit"
    value="Sign In"
  />
  <Loading
    text="signing in"
  >
    <ProgressBar />
  </Loading>
  <p
    className="form-footer text-right"
  >
    Don't have an account?
     
    <span>
      <button
        className="btn btn-alt"
      >
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          to="/signup"
        >
          Sign Up
        </NavLink>
      </button>
    </span>
  </p>
</Form>
`;
